--- a/trunk/py/resources/share/control/mask.css
+++ b/trunk/py/resources/share/control/mask.css
@@ -2,6 +2,10 @@
 
 .x-mask {
 	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
 }
 
 /* mask    */
@@ -14,13 +18,11 @@
 	position:absolute;
 	top: 0;
 	left: 0;
-	z-index: 900;
 }
 
 
 
 .x-mask-content {
-	z-index: 901;
 	opacity: 1;
 	left: 50%;
 	top: 50%;
