--- a/trunk/py/resources/share/control/core.css
+++ b/trunk/py/resources/share/control/core.css
@@ -1,9 +1,9 @@
 
 
-/**    核心      */
+/**       修复      */
 
 /* 删除标签自带 mragin， padding  */
-html, body, applet, object, iframe, .x-header h3 {
+html, body, object, iframe {
 	padding: 0;
 	margin: 0;
 }
@@ -39,76 +39,11 @@ input {
 	text-decoration: none;
 }
 
-/** 标准面板 */
-
-/* 顶部和底部 */
-.x-header, .x-footer {
-	padding-left: 4px;
-	background-repeat: no-repeat;
-	overflow: hidden;
-	cursor: default;
+label .x-icon{
+	float: none;
+	display: inline-block;
 }
 
-/* 容器 */
-.x-header-container, .x-footer-container{
-	padding-right: 4px;
-	background-repeat: no-repeat;
-}
-
-/* 顶部容器 */
-.x-header {
-	height:28px;
-}
-
-/* 顶部内容 */
-.x-header-content {
-	background-repeat: repeat-x;
-	padding: 3px 1px 1px 5px;
-	line-height: 24px;
-	overflow: hidden;
-}
-
-/* 可移动容器标题 */
-.x-movable .x-header {
-	cursor: move;
-}
-
-/* 工具按钮   */
-.x-header a.x-icon {
-	float:right;
-	margin-top: 3px;
-	margin-right: 1px;
-}
-
-.x-header h3 .x-icon {
-	margin-top: 2px;
-}
-
-/* 正文 */
-.x-container {
-	display:block;
-	border-style: solid;
-	overflow: auto;
-	
-	/*  IE6 必须在有 width 才可支持 overflow 属性  *//*
-
-	_width: expression(parseInt(this.parentNode.currentStyle.width) - 2);
-*/
-}
-
-
-/* 内容 */
-.x-content {
-	padding: 5px;
-}
-
-/* 底部内容 */
-.x-footer-content  {
-	height: 5px;
-	font-size: 0;
-	background-repeat: repeat-x;
-	overflow: hidden;
-}
 
 /** 列表  */
 
@@ -119,28 +54,12 @@ input {
 	padding: 0px;
 }
 
+/** 布局  */
 
-
-
-.x-green{
-	background: green;
-}
-
-
-.x-red{
-	background: red;
-}
-
-
-
-
-
+/* 绝对定位  */
 .x-layout-absolute {
 	position: absolute;
 }
-
-
-
 
 /* 自动溢出  */
 .x-layout-flow{
@@ -152,8 +71,13 @@ input {
 	letter-spacing: 0px;
 }
 
-
-
-#py_proxy {
+/* 代理    */
+.x-proxy {
 	z-index: 100000;
+	position: absolute;
+	overflow: hidden;
 }
+
+
+
+
