--- a/trunk/py/resources/share/viewer/tooltip.css
+++ b/trunk/py/resources/share/viewer/tooltip.css
@@ -5,16 +5,22 @@
 	cursor: default;
 	
 	z-index: 100000;
+	padding-left: 4px;
 }
 
-.x-container-contetnt  {
-	padding:2px 4px 2px 1px;
-	margin-left: 3px;
-	background-position: bottom right;
-	height: 18px;
+.x-tooltip-container  {
+	padding-right:4px;
+}
+
+.x-tooltip-contetnt {
+	padding-top: 2px;
+	padding-bottom: 2px;
+	color: #555;
 	font-size: 12px;
 	font-family: System;
 	line-height:18px;
-	color: #555;
+	height: 18px;
 	display: inline-block;
+	_display: inline;
+	_zoom: 1;
 }
