--- a/py/resources/default/container/tabcontrols.css
+++ b/py/resources/default/container/tabcontrols.css
@@ -56,6 +56,11 @@
 }
 
 
+.x-tabcontrols-body {
+	border-color: #b8d0d6;
+	border-width: 0 1px;
+	border-style: solid;
+}
 
 
 .x-tabcontrols-footer {
